src/bootstrap/test/v0_6/rejects/06_double_nullable/main.zg
# requires: v0.6

x: int?? = nil
print x
